Fix formatting of header on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ main {
   /* border: 1px solid black; */
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1000px) {
   .quick-settings {
     flex-direction: column;
     align-items: center;
@@ -71,7 +71,6 @@ main {
 .quick-settings ul {
   display: flex;
   align-items: center;
-  padding: 5px;
   list-style-type: none;
   /* border: 1px solid red; */
 }
